--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "mongoose": "^8.0.3",
+    "short-unique-id": "^5.0.3",
     "socket.io": "^4.7.2"
   }
 }
