--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,12 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@types/youtube": "^0.0.50",
+    "axios": "^1.6.2",
     "load-script": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
+    "socket.io-client": "^4.7.2",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
