--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,4 @@ APP_SECRET=STPzPd45odPKDiYEzTxpic
 COOKIE_NAME=synced_session
 PORT=3000
 DB_USER=BugsyFTW
-DB_PASSWORD=Akinfenwa08
+DB_PASSWORD=BugsyPass
