--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,6 @@ APP_SECRET=STPzPd45odPKDiYEzTxpic
 COOKIE_NAME=synced_session
 PORT=3000
 DB_USER=BugsyFTW
-DB_PASSWORD=BugsyPass
+DB_PASSWORD=94iHaZaTEkEg1svp
+
+
